@@ -396,6 +396,8 @@
 	ccGLBlendFunc( blendFunc_.src, blendFunc_.dst );
 
 	glDrawArrays(GL_TRIANGLE_STRIP, 0, 4);
+	
+	CC_INCREMENT_GL_DRAWS(1);
 }
 
 #pragma mark Protocols
