@@ -252,6 +252,8 @@
 	glVertexAttribPointer(kCCVertexAttrib_Color, 4, GL_UNSIGNED_BYTE, GL_TRUE, 0, colorPointer_);
 
     glDrawArrays(GL_TRIANGLE_STRIP, 0, (GLsizei)nuPoints_*2);
+	
+	CC_INCREMENT_GL_DRAWS(1);
 }
 
 - (void)dealloc
