@@ -537,6 +537,8 @@
 
 #endif // CC_TEXTURE_ATLAS_USE_VAO
 
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 @end
