@@ -77,6 +77,8 @@ void GLESDebugDraw::DrawPolygon(const b2Vec2* old_vertices, int32 vertexCount, c
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, vertices);
 	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
 
+	CC_INCREMENT_GL_DRAWS(1);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
@@ -102,6 +104,8 @@ void GLESDebugDraw::DrawSolidPolygon(const b2Vec2* old_vertices, int32 vertexCou
 
 	glUniform4f( mColorLocation, color.r, color.g, color.b,1);
 	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
+
+	CC_INCREMENT_GL_DRAWS(2);
 
 	CHECK_GL_ERROR_DEBUG();
 }
@@ -130,6 +134,8 @@ void GLESDebugDraw::DrawCircle(const b2Vec2& center, float32 radius, const b2Col
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, glVertices);
 
 	glDrawArrays(GL_LINE_LOOP, 0, vertexCount);
+
+	CC_INCREMENT_GL_DRAWS(1);
 
 	CHECK_GL_ERROR_DEBUG();
 }
@@ -165,6 +171,8 @@ void GLESDebugDraw::DrawSolidCircle(const b2Vec2& center, float32 radius, const 
 	// Draw the axis line
 	DrawSegment(center,center+radius*axis,color);
 
+	CC_INCREMENT_GL_DRAWS(2);
+
 	CHECK_GL_ERROR_DEBUG();
 }
 
@@ -183,6 +191,8 @@ void GLESDebugDraw::DrawSegment(const b2Vec2& p1, const b2Vec2& p2, const b2Colo
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, glVertices);
 
 	glDrawArrays(GL_LINES, 0, 2);
+	
+	CC_INCREMENT_GL_DRAWS(1);
 
 	CHECK_GL_ERROR_DEBUG();
 }
@@ -215,6 +225,8 @@ void GLESDebugDraw::DrawPoint(const b2Vec2& p, float32 size, const b2Color& colo
 
 	glDrawArrays(GL_POINTS, 0, 1);
 //	glPointSize(1.0f);
+	
+	CC_INCREMENT_GL_DRAWS(1);
 
 	CHECK_GL_ERROR_DEBUG();
 }
@@ -242,6 +254,8 @@ void GLESDebugDraw::DrawAABB(b2AABB* aabb, const b2Color& c)
 
 	glVertexAttribPointer(kCCVertexAttrib_Position, 2, GL_FLOAT, GL_FALSE, 0, glVertices);
 	glDrawArrays(GL_LINE_LOOP, 0, 8);
+	
+	CC_INCREMENT_GL_DRAWS(1);
 
 	CHECK_GL_ERROR_DEBUG();
 }
