@@ -1428,7 +1428,9 @@ static float menuItemPaddingCenter = 50;
 
 	// 2D projection
 	[director_ setProjection:kCCDirectorProjection2D];
-	//	[director setProjection:kCCDirectorProjection3D];
+//	[director setProjection:kCCDirectorProjection3D];
+	
+	[director_ setDisplayStats:YES];
 
 	// Enables High Res mode (Retina Display) on iPhone 4 and maintains low res on all other devices
 	if( ! [director_ enableRetinaDisplay:YES] )
